# Autonomous-Track-Inspection-System

./: CMakeLists.txt  README.md  install.txt  run.sh
config/: dimensions.yaml
config/default/: params.yaml
config/user/: config.yaml
include/: log.hpp  param.hpp  utils.hpp
include/sensors/: adhoc.hpp  controller.hpp  manager.hpp  sync.hpp  timestamp.hpp
include/sensors/camera/: filter.hpp  func.hpp
include/sensors/ins/: func.hpp  helper.hpp
include/sensors/lidar/: func.hpp  helper.hpp
include/sensors/pools/: unified_pool.hpp
include/sensors/thermometer/: func.hpp
src/: log.cpp  params.cpp  utils.cpp
src/app/: run.cpp
src/sensors/: adhoc.cpp  controller.cpp  manager.cpp
src/sensors/camera/: filter.cpp  func.cpp
src/sensors/ins/: func.cpp  helpers.cpp
src/sensors/lidar/: funcs.cpp  helper.cpp
src/sensors/pools/: unified_pool.cpp
src/sensors/thermometer/: func.cpp
